# muduo-im

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.ini  docker-compose.es.yml  docker-compose.sentinel.yml  docker-compose.yml  docker-config.ini  restart.sh  start.sh  status.sh  stop.sh
.github/workflows/: ci.yml  e2e-drills.yml
benchmark/: ws_bench.cpp  ws_benchmark.py
deploy/: README.md
deploy/distributed/: README.md
deploy/etcd/: RUNBOOK.md
deploy/grpc/: Dockerfile  RUNBOOK.md  docker-compose.yml
deploy/kafka/: docker-compose.cluster.yml  docker-compose.yml  init-topics-cluster.sh  init-topics.sh  rolling_restart_drill.sh
deploy/kafka/cluster-tarball/: down.sh  init-topics.sh  rolling_restart_drill.sh  up.sh
deploy/kafka/cluster-tarball/configs/: server-1.properties  server-2.properties  server-3.properties
deploy/lb/: haproxy.cfg  lb_e2e.sh  up.sh
deploy/multi-az/: RUNBOOK.md  mm2.properties
deploy/multi-az/mm2-tarball/: down.sh  drill.sh  up.sh
deploy/multi-az/mm2-tarball/configs/: az1-broker.properties  az2-broker.properties  mm2.properties
deploy/mysql-replication/: RUNBOOK.md  docker-compose.yml  failover_drill.sh  init-replication.sh  promote.sh
deploy/observability/: RUNBOOK.md  down.sh  up.sh
deploy/observability/configs/: .my.cnf  alert.rules.yml  alertmanager.yml  prometheus.yml
deploy/observability/grafana/dashboards/: haproxy.json  kafka.json  muduo-im.json  mysql.json  node-exporter.json  redis.json
deploy/observability/grafana/provisioning/datasources/: prometheus.yml
deploy/redis-sentinel/: down.sh  failover_drill.sh  up.sh
deploy/redis-sentinel/configs/: master.conf  replica-1.conf  replica-2.conf  sentinel-1.conf  sentinel-2.conf  sentinel-3.conf
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  FUTURE_WORK.md  PROTOCOL.md  REDIS_CONFIG.md  TECHNICAL_DETAILS.md  architecture.mmd
docs/plans/: 2026-04-11-phase3-muduo-im-server.md  2026-04-11-phase4-frontend-integration.md  2026-04-17-acid-durability-improvements.md  2026-04-18-plan-b-mvp-sop.md  2026-04-22-plan-b-execution-roadmap.md  2026-04-25-p1-2-grpc-split-blueprint.md  2026-05-04-multi-az-design.md
proto/im/: common.proto  logic.proto  registry.proto
sql/: init.sql  migrate_fk.sql
sql/migrations/: 20260421_120000_snowflake_msg_id.sql  20260422_140000_add_mentions.sql  20260425_170000_add_message_edit.sql  20260425_180000_add_message_reactions.sql  20260425_190000_add_delivered_at.sql  20260425_200000_add_archive_index.sql
src/common/: Config.h  JWT.h  Logging.h  Protocol.h  RedisConfigLoader.h
src/gateway/: ConsistentHashRing.h  LogicClient.h  LogicClientPool.h  main.cpp
src/logic/: GatewayRegistry.h  LogicServiceImpl.h  main.cpp
src/moderation/: AhoCorasick.h  ContentModerationService.h
src/persister/: main.cpp
src/push_router/: main.cpp
src/registry/: RegistryServiceImpl.h  main.cpp
src/server/: AuditService.h  ChatServer.h  DeviceService.h  ESClient.h  FriendService.h  GroupService.h  InstanceRouter.h  JwtRevocationService.h  MessageService.h  OnlineManager.h  OutboxService.h  PushService.h  SagaCoordinator.h  UserService.h  main.cpp
tests/: e2e_test.sh  grpc_logic_smoke.cpp  saga_drill.sh  test_friend_service.cpp  test_group_service.cpp  test_helper.h  test_jwt_revocation.cpp  test_message_service.cpp  test_outbox_e2e.cpp  test_routing_key.cpp  test_saga_coordinator.cpp  test_user_service.cpp
tests/etcd/: failover_e2e.sh  multi_az_crosshost_drill.sh  multi_az_e2e.sh  multi_az_netns_drill.sh  topology_e2e.sh
tests/grpc/: topology_e2e.py  topology_e2e.sh
tools/archive_worker/: Dockerfile  archive.py  cron.sh  query_server.py
tools/es_init/: init.sh
tools/es_sync_worker/: Dockerfile  sync.py
tools/push_worker/: Dockerfile  worker.py
tools/thumb_worker/: Dockerfile  worker.py
web/: index.html
